--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  
-  
-  
-  
+  <head>
+    <body>
+      
+      
+    </body>
 </html>
