--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <body>
-      
-      
-    </body>
+<head></head>
+<body></body>
 </html>
