automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>  
-   <body>
-</html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
