--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+</html>  
